# autotls-controller

./: Cargo.toml  Containerfile  README.md
deploy/chart/: Chart.yaml  values.yaml
deploy/chart/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
src/: main.rs
