[package]
name = "autotls-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.71.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_23"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
